--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body{
     width: 100%;
-    margin: 30px;
+    margin: 100px;
+    margin: 0px;
+    padding: 0px;
     background-color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #profile-container{
     max-width: 300px;
@@ -16,11 +19,17 @@ body{
 #profile-name{
     text-align: center;
 }
-<<<<<<< HEAD
 #footer{
-=======
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background-color: burlywood;
+    text-align: center;
+    color: white;
+}
+
 #header{
->>>>>>> Header
+
     width: 100%;
     height: 50px;
     line-height: 50px;
